Fixed a wagons alignment

--- a/src/components/train/styles.css
+++ b/src/components/train/styles.css
@@ -1,6 +1,6 @@
 .train__container {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   position: relative;
   width: 90%;
